examples/test/testpolicy10026.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10026
  namespace: namespace189
spec:
  podSelector:
    matchLabels:
      key21: value15
      key41: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value6
          key45: value12
      podSelector:
        matchLabels:
          key26: value14
